@@ -3,7 +3,7 @@
 
 #view_publishers
 {view_head}
-<style>{css}</style>
+<style>#background_image{url('/art/mexico_background_image.jpg')};{css}</style>
 {beige}
 {main_head}
 {main_min}
