@@ -1,6 +1,7 @@
 Development Portal (2015-01-30 shi)
 ==============================
 Changed remaining "Transactions" to "Spend"
+Background-image fix
 
 
 Development Portal (2014-11-30 shi)
